# chess-green-agent

./: .gitignore  Dockerfile  README.md  elo_ratings.json  elo_ratings.json.json  game.pgn  game1.pgn  game_data.json  game_data1.json  game_eval.json  main.py  player_data.json  player_data1.json  pyproject.toml  requirements.txt
src/: __init__.py  launcher.py
src/green_agent/: agent.py  chess_green_agent.toml  green_agent_wrapper.py  tau_green_agent.toml
src/my_util/: __init__.py  my_a2a.py  utils.py
src/white_agent/: agent.py
test_cases/: test_case_0.json  test_case_1.json  test_case_2.json
