[project]
name = "chess-bench-example"
version = "0.1.0"
description = "Code for agentifying a chess benchmark."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "dotenv>=0.9.9",
    "earthshaker>=0.1.12",
    "pydantic-settings>=2.11.0",
    "tau-bench",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "python-chess>=1.8.0",
    "open_spiel>=1.0.0",
    "requests>=2.31.0",
    "google-cloud-storage>=2.17.0"
]

[tool.uv.sources]
tau-bench = { git = "https://github.com/sierra-research/tau-bench.git" }
